# FastMCP

./: .env.example  .gitignore  AGENTS.md  README.md  apps.demo.yaml  apps.yaml  pyproject.toml  skills.md
builder/examples/: create_task_workflow.json  overdue_tasks_report.json
docs/: agent-model.md  application-context.md  approval-agent-lifecycle.md  architecture.md  codex-implementation-prompts.md  continuation-guide.md  demo-fits-bot.md  enforcement-model.md  formatter-ux.md  management-update.md  request-routing.md  routing-orchestration.md  visual-artifacts.md
domains/: demo_dispatch.yaml  demo_maintenance.yaml  fits.yaml  maintenance.yaml  remp_local.yaml
scripts/: capture_understanding.py  demo_fits_bot.py  preview_builder.py  seed_demo.py
src/tag_fastmcp/: __init__.py  app.py  http_api.py  settings.py
src/tag_fastmcp/agent/: admin_orchestration_agent.py  clarification_agent.py  prompts.py  schema_intelligence_agent.py  structured_chat_agent.py  stubs.py
tests/: conftest.py  test_agent_registry.py  test_approval_lifecycle.py  test_builder_runtime.py  test_chat_sql_fallback.py  test_database_urls.py  test_formatter_service.py  test_http_api.py  test_inline_app_config.py  test_lifecycle_tools.py  test_orchestration_service.py  test_phase2_enforcement.py  test_query_tools.py  test_routing_tools.py  test_schema_tools.py  test_simple_runtime_profile.py  test_sql_policy.py  test_state_stores.py  test_system_tools.py  test_understanding_capture.py  test_workflow_tools.py
ui/: index.html  package.json  vite.config.js
ui/src/: App.jsx  index.css
(+53 files in other folders)
